favicon, omit btn and message

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 ---
 layout: default
-title: Home
+title: Flow - Home Page
 ---
 
 <div class="page-container">
   <h1>flow</h1>
   <h2>Aprendizagem Fluida</h2>
-  <button id="learnMoreBtn">Saiba Mais</button>
+  <p>Desenvolva fatores humanos e técnicos através de uma aprendizagem fluida por meio do desenvolvimento de projetos de maneira prática.</p>
+  <!-- <button id="learnMoreBtn">Saiba Mais</button> -->
   <div class="social-icons-container">
     <a href="https://www.instagram.com/sejaflow/" class="fa fa-instagram"></a>
     <a href="https://github.com/sejaflow" class="fa fa-github"></a>
   </div>
 </div>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     document.getElementById("learnMoreBtn").onclick = function () {
         location.href = "{{ "/sobre.html" | relative_url }}";
     };
-</script>
+</script> -->
